# amlit-speaks

./: .dockerignore  .gitignore  Dockerfile  README.md  TODOS.md  compose.prod.yaml  compose.yaml  config.py  database.py  enums.py  fake_call.json  functions.py  main.py  models.py  pyproject.toml  setup_db.py  supabase.py  supabase_client.py  voice_generate.py
.github/workflows/: build.yaml
frontend/: index.html  prod_index.html
